Refactor ELF parser tests: add mapReadOnly function
Summary:
Many ELF parser tests opening a file, map the file into memory, and create an Elf object with the mapping. Factor this duplicated code into a function.

This diff should not change behavior.

Reviewed By: styurin

fbshipit-source-id: 5e56bde60c