@@ -18,12 +18,12 @@ package com.facebook.buck.cxx.toolchain.elf;
 
 import static org.junit.Assert.assertThat;
 
+import com.facebook.buck.cxx.ElfFile;
 import com.facebook.buck.testutil.TemporaryPaths;
 import com.facebook.buck.testutil.integration.ProjectWorkspace;
 import com.facebook.buck.testutil.integration.TestDataHelper;
 import java.io.IOException;
-import java.nio.MappedByteBuffer;
-import java.nio.channels.FileChannel;
+import java.nio.file.Path;
 import org.hamcrest.Matchers;
 import org.junit.Before;
 import org.junit.Rule;
@@ -43,23 +43,19 @@ public class ElfVerNeedTest {
 
   @Test
   public void test() throws IOException {
-    try (FileChannel channel = FileChannel.open(workspace.resolve("libfoo.so"))) {
-      MappedByteBuffer buffer = channel.map(FileChannel.MapMode.READ_ONLY, 0, channel.size());
-      Elf elf = new Elf(buffer);
-      ElfSection stringTable =
-          elf.getMandatorySectionByName(channel.toString(), ".dynstr").getSection();
-      ElfSection section =
-          elf.getMandatorySectionByName(channel.toString(), ".gnu.version_r").getSection();
-      assertThat(section.header.sh_type, Matchers.is(ElfSectionHeader.SHType.SHT_GNU_VERNEED));
-      ElfVerNeed verNeed = ElfVerNeed.parse(elf.header.ei_class, section.body);
-      assertThat(verNeed.entries, Matchers.hasSize(1));
-      assertThat(
-          stringTable.lookupString(verNeed.entries.get(0).getFirst().vn_file),
-          Matchers.equalTo("libc.so.6"));
-      assertThat(verNeed.entries.get(0).getSecond(), Matchers.hasSize(1));
-      assertThat(
-          stringTable.lookupString(verNeed.entries.get(0).getSecond().get(0).vna_name),
-          Matchers.equalTo("GLIBC_2.2.5"));
-    }
+    Path elfFilePath = workspace.resolve("libfoo.so");
+    Elf elf = ElfFile.mapReadOnly(elfFilePath);
+    ElfSection stringTable = elf.getMandatorySectionByName(elfFilePath, ".dynstr").getSection();
+    ElfSection section = elf.getMandatorySectionByName(elfFilePath, ".gnu.version_r").getSection();
+    assertThat(section.header.sh_type, Matchers.is(ElfSectionHeader.SHType.SHT_GNU_VERNEED));
+    ElfVerNeed verNeed = ElfVerNeed.parse(elf.header.ei_class, section.body);
+    assertThat(verNeed.entries, Matchers.hasSize(1));
+    assertThat(
+        stringTable.lookupString(verNeed.entries.get(0).getFirst().vn_file),
+        Matchers.equalTo("libc.so.6"));
+    assertThat(verNeed.entries.get(0).getSecond(), Matchers.hasSize(1));
+    assertThat(
+        stringTable.lookupString(verNeed.entries.get(0).getSecond().get(0).vna_name),
+        Matchers.equalTo("GLIBC_2.2.5"));
   }
 }
